Clipped chat fix WIP (#355)

--- a/app/assets/stylesheets/chat-ui-popup.scss
+++ b/app/assets/stylesheets/chat-ui-popup.scss
@@ -64,7 +64,6 @@ $page-height: calc(100% - 5px);
 .ciapiSkinContainerStandardSize {
     max-height: 40rem;
     height: 100%;
-    min-width: 20rem;
     width: 29rem;
 }
 
@@ -83,7 +82,6 @@ $page-height: calc(100% - 5px);
     flex-flow: wrap;
     justify-content: space-between;
     flex-direction: row;
-    gap: 1rem;
     h2 {
         color: white;
         margin-bottom: 0.3rem;
